Cut off email address with ellipsis. Fix bug where long emails push the content off the screen.

--- a/resources/static/dialog/css/m.css
+++ b/resources/static/dialog/css/m.css
@@ -7,10 +7,18 @@
  */
 @media screen and (max-width: 640px) {
 
+  html, body{
+    height: auto;
+  }
+
   header, footer {
     position: static;
     padding: 5px 20px;
     -webkit-text-size-adjust: none;
+  }
+
+  footer{
+    padding: 10px 20px;
   }
 
   button {
@@ -101,6 +109,7 @@
 
   #signIn .table{
     padding: 10px 20px 20px;
+    display: block;
   }
 
   .pickemail #signIn .table {
@@ -109,6 +118,7 @@
 
   #signIn .vertical {
       position: static;
+      display: block;
   }
 
   #signIn form {
